# CMSC498F

./: README.md
2D_SLAM/: BagFilesLinks.txt
2D_SLAM/project_5/adventure_bringup/launch/includes/: mobile_base.launch.xml
2D_SLAM/project_5/adventure_simulator/adventure_description/finn/: finn.urdf.xacro
2D_SLAM/project_5/adventure_simulator/adventure_gazebo/launch/: adventure.rviz  adventure_demo.launch  (+1 more)
2D_SLAM/project_5/adventure_slam/: adventure_slam.py  param.yaml  param.yaml~  ros_map.py  ros_map.py~
2D_SLAM/project_5/adventure_slam/launch/: adventure_slam.launch
2D_SLAM/project_5/adventure_slam/project_4/: args_parser.py  geometry.py  map_maker.py  map_maker.py~
Kinematics/: CMakeLists.txt  package.xml
Kinematics/src/: forward.py  inverse.py  services.py
Kinematics/src/uid_114965165_project_2/: kinematics.py
Mapping/: map.rviz
Mapping/src/: ros_map.py
Mapping/src/assignment_3/: geometry.py  map_maker.py  map_maker_backup.py
Navigation/: video_links
Navigation/ymanian_project_3/: CMakeLists.txt  package.xml
Navigation/ymanian_project_3/launch/: project_3_world.launch
Navigation/ymanian_project_3/src/: open_polygon.py  potential_field_nav.py  prop_polygon.py
Vision_calib/: corners.csv  detect.py
Vision_calib/calibrationdata/: ost.txt  ost.yaml
adventure_visual_servo/: ProjectVideoLink.txt
adventure_visual_servo/project_6/adventure_gripper/adventure_arm_moveit_config/: .setup_assistant
adventure_visual_servo/project_6/adventure_recognition/: CMakeLists.txt  arm_trial.py  navigation.py  object_search.py  package.xml  starter.py
(+3 files in other folders)
