<?xml version="1.0"?>
<package>
  <name>uid_114965165_project_2</name>
  <version>0.0.0</version>
  <description>The project_2 package</description>

  <maintainer email="ymanian@umd.edu">Yash Manian</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>wheeled_robot_kinematics</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>wheeled_robot_kinematics</run_depend>


  <export>

  </export>
</package>
